added some handlebars and an html page to work with

--- a/Develop/views/layouts/main.handlebars
+++ b/Develop/views/layouts/main.handlebars
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FeastFindr</title>
-    <link rel="stylesheet" href="Develop\public\css\style.css">
-    <link rel="stylesheet" href="Develop\public\css\mystyles.scss">
-    <link rel="stylesheet" href="Develop\public\css\jass.css">
-
+    <link rel="stylesheet" href="../public/css/jass.css">
+    <link rel="stylesheet" href="../sass/mystyles.scss">
+    <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="../public/css/mystyles.css">
 </head>
 <body>
     <main>
