--- a/Develop/public/sass/mystyles.scss
+++ b/Develop/public/sass/mystyles.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
-@import "./node_modules/bulma/sass";
+
+
 
 // Brand Colors
 $burnt-orange: #D95437;
@@ -10,33 +11,17 @@ $dark-blue: #2A4D58;
 
 // Bulma component variables
 $background-color: $dark-blue;
+$primary: $burnt-orange;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+// Below is code for the tile flip
 $flipIcon: url("data:image/svg+xml,%3Csvg width='300' height='400' version='1.1' viewBox='0 0 300 400' xml:space='preserve' xmlns='http://www.w3.org/2000/svg'%3E%3Cg transform='matrix(-.70408 .71012 .71012 .70408 254.46 -106.04)' fill='%23333' fill-opacity='0.5' %3E%3Cg transform='matrix(.58999 .0052778 .0052778 .5899 141.76 -10.776)' fill='%23333'%3E%3Cpath d='m421.89 247.04v7.964c0 71.572-58.229 129.8-129.8 129.8s-129.8-58.229-129.8-129.8v-65.551l27.712 27.634 53.652-53.652-126.42-126.34-128.77 128.87 53.652 53.652 30.061-30.16v65.552c0 58.762 22.868 113.99 64.393 155.52s96.755 64.393 155.52 64.393 113.99-22.868 155.52-64.393c41.524-41.524 64.392-96.755 64.392-155.52v-7.964z' fill='%23333'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
 
 .flip-wrapper {
   position: relative;
-  
+
   // compensate for the space of the last item in a column
-  &.bottom{
-    margin-bottom:-1.4em;
+  &.bottom {
+    margin-bottom: -1.4em;
   }
   @at-root .tile input[type="checkbox"] {
     // Hiding the checkbox. We never want to see it.
@@ -75,13 +60,12 @@ $flipIcon: url("data:image/svg+xml,%3Csvg width='300' height='400' version='1.1'
       backface-visibility: hidden;
       transform-style: preserve-3d;
       transition: all 0.4s ease-in-out;
-      
+
       // Add the icon to indicate functionality
       background-image: $flipIcon;
       background-size: 20px 20px;
       background-repeat: no-repeat;
       background-position: top 10px right 10px;
-      
     }
     .flip-tile-front {
       // Default rotation values
@@ -103,3 +87,7 @@ $flipIcon: url("data:image/svg+xml,%3Csvg width='300' height='400' version='1.1'
     }
   }
 }
+
+
+// Imports 
+@import "../../node_modules/bulma/bulma.sass";
