--- a/Develop/views/header.handlebars
+++ b/Develop/views/header.handlebars
@@ -1,7 +1,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="https://bulma.io">
-      <img src="" width="112" height="28">
+      <img src="./public/images/FeastFindr.png" width="112" height="28">
     </a>
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="">
@@ -16,7 +16,7 @@
       <a class="navbar-item">
         Home
       </a>
-
+  {{#if loggedIn}}
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
