--- a/Develop/views/layouts/main.handlebars
+++ b/Develop/views/layouts/main.handlebars
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="Develop\public\css\style.css">
     <link rel="stylesheet" href="Develop\public\css\mystyles.scss">
     <link rel="stylesheet" href="Develop\public\css\jass.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1ovytU9r6Rz1l7gDroFxGk1KtbC5/6OWIX4Dkl" crossorigin="anonymous">
 
 </head>
 <body>
