--- a/Develop/views/partials/header.handlebars
+++ b/Develop/views/partials/header.handlebars
@@ -1,7 +1,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="https://bulma.io">
-      <img src="./public/images/FeastFindr.png" width="112" height="28">
+      <img src="./images/FeastFindr.png" width="112" height="112">
     </a>
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="">
@@ -16,18 +16,24 @@
       <a class="navbar-item">
         Home
       </a>
-  {{#if loggedIn}}
-    <div class="navbar-end">
-      <div class="navbar-item">
-        <div class="buttons">
-          <a class="button is-primary">
-            <strong>Sign up</strong>
-          </a>
-          <a class="button is-light">
-            Log in
-          </a>
+      <div class="navbar-end">
+        <div class="navbar-item">
+          <div class="buttons">
+
+            {{#if loggedIn}}
+            <a class="button is-primary">
+              <strong>Profile</strong>
+            </a>
+            
+            {{else}}
+            <a class="button is-primary">
+              <strong>Sign up / Log in</strong>
+            </a>
+            {{/if}}
+            </div>
+          </div>
         </div>
-      </div>
+      
     </div>
   </div>
 </nav>
