--- a/Develop/views/layouts/main.handlebars
+++ b/Develop/views/layouts/main.handlebars
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FeastFindr</title>
-    <link rel="stylesheet" href="../public/css/jass.css">
-    <link rel="stylesheet" href="../sass/mystyles.scss">
-    <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="stylesheet" href="/css/jass.css">
+    <link rel="stylesheet" href="/sass/mystyles.scss">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" href="../public/css/mystyles.css">
+    <link rel="stylesheet" href="/css/mystyles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1ovytU9r6Rz1l7gDroFxGk1KtbC5/6OWIX4Dkl" crossorigin="anonymous">
 </head>
 <body>
-    <main>
+    <main class="">
         {{{ body }}}
     </main>
    
