--- a/Develop/views/layouts/main.handlebars
+++ b/Develop/views/layouts/main.handlebars
@@ -7,16 +7,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FeastFindr</title>
     <link rel="stylesheet" href="/css/jass.css">
-    <link rel="stylesheet" href="/sass/mystyles.scss">
+    <link rel="stylesheet" href="/css/mystyles.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" href="/css/mystyles.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1ovytU9r6Rz1l7gDroFxGk1KtbC5/6OWIX4Dkl" crossorigin="anonymous">
 </head>
 <body>
-    <main class="">
+
+    <div class="flex-column justify-space-around">
+
+        <nav class="navbar" role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="https://bulma.io">
+                <img src="./images/FeastFindr.png" width="112" height="112">
+                </a>
+
+                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                </a>
+            </div>
+
+            <div class="navbar-menu">
+                <div class="navbar-start">
+                <a class="navbar-item">
+                    Home
+                </a>
+                <div class="navbar-end">
+                    <div class="navbar-item">
+                    <div class="buttons">
+
+                        {{#if loggedIn}}
+                        <a class="button is-primary">
+                        <strong>Profile</strong>
+                        </a>
+                        
+                        {{else}}
+                        <a class="button is-primary">
+                        <strong>Sign up / Log in</strong>
+                        </a>
+                        {{/if}}
+                        </div>
+                    </div>
+                    </div>
+                
+                </div>
+            </div>
+        </nav>
+
+        <main class="">
         {{{ body }}}
-    </main>
+        </main>
+    </div>
+
+    
    
 </body>
 
