--- a/Develop/views/homepage.handlebars
+++ b/Develop/views/homepage.handlebars
@@ -1,20 +1,21 @@
-
 <!-- Homepage Content -->
 <section class="hero">
   <div class="hero-body">
     <div class="container">
       <div class="columns is-vcentered">
-        <div class="column">
-          <h1 class="title">
-            MOBILE MUNCHIES MADE EASY
-          </h1>
-          <p class="subtitle">
-            FeastFindr is a mobile app that helps you locate your favorite food trucks on the go. Our mission is to provide foodies with an easy and convenient way to satisfy their cravings and discover new mobile eats.
-          </p>
+        <div class="column content-container">
+          <h2 class="text-burnt-orange">FIND YOUR FLAVOR</h2>
+          <p class="text-dark-blue">FeastFindr is a mobile app that helps you locate your favorite food trucks on the go. Our mission is to provide foodies with an easy and convenient way to satisfy their cravings and discover new mobile eats.</p>
+
+          <form id="search-form" action="/food-truck" method="GET" class="form-container content-container">
+            <input class="search-field border-burnt-orange" type="text" id="location" name="location" aria-label="Enter your location" placeholder="Enter your city" required>
+            <button class="search-btn brand-font bg-dark-blue text-light-blue" type="submit">SEARCH</button>
+          </form>
         </div>
+
         <div class="column">
           <figure>
-            <img src="#" alt="Hero image">
+            <img src="./images/FeastFindr-Hero.png" alt="Hero image">
           </figure>
         </div>
       </div>
@@ -22,32 +23,29 @@
   </div>
 </section>
 
-<section class="section">
-    <div class="columns">
+<section class="section no-padding-section">
+    <div class="columns no-padding-columns">
         <!-- Image on left -->
-        <div class="column is-half">
+        <div class="column is-half no-margin-padding">
             <figure class="image is-1by1">
-                <img src="#" alt="placeholder">
+                <img src="./images/food-truck-owner.png" alt="placeholder">
             </figure>
         </div>
         <!-- Content on the right -->
         <div class="column is-half bg-burnt-orange">
-            <div class="content has-text-centered">
-                <h2 class="title">FIND YOUR FLAVOR</h2>
-                <p>Delicious food for every mood.</p>
+            <div class="content has-text-centered owner-container">
+              <div class="inner-container">
+                <h1 class="brand-font truck-owner-title">
+                  FOOD TRUCK FAME AWAITS
+                </h1>
+                <p class="subtitle truck-owner-p">
+                   Attract more customers and boost your sales by signing up with FeastFindr! Our platform showcases your food truck, making it easier for food lovers to discover and enjoy your delicious creations. Don't miss out on this opportunity to grow your business and become a go-to choice for mobile food enthusiasts in your area.
+                </p>
 
-                <form class="field" action="/search" method="POST">
-                    <div class="field">
-                        <div class="control">
-                            <input class="input" type="text" placeholder="Enter your city" required>
-                        </div>
-                    </div>
-                    <div class="field">
-                        <div class="control">
-                            <button class="button is-rounded">Search</button>
-                        </div>
-                    </div>
+                <form id="search-form" action="/sign-up" method="GET" class="form-container content-container">
+                  <button class="search-btn brand-font bg-dark-blue text-light-blue btn-hover" type="submit">SIGN UP</button>
                 </form>
+              </div>
             </div>
         </div>
     </div>
@@ -143,3 +141,8 @@
               </span>
               <span class="icon has-text-warning">
                 <i class="fas fa-star"></i>
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
