--- a/Develop/views/layouts/main.handlebars
+++ b/Develop/views/layouts/main.handlebars
@@ -10,50 +10,28 @@
     <link rel="stylesheet" href="/css/mystyles.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1ovytU9r6Rz1l7gDroFxGk1KtbC5/6OWIX4Dkl" crossorigin="anonymous">
 </head>
 <body>
 
     <div class="flex-column justify-space-around">
 
-        <nav class="navbar" role="navigation" aria-label="main navigation">
-            <div class="navbar-brand">
-                <a class="navbar-item" href="https://bulma.io">
-                <img src="./images/FeastFindr.png" width="112" height="112">
+        <nav class="custom-navbar bg-dark-blue" role="navigation" aria-label="main navigation">
+            <a class="logo-container" href="https://bulma.io">
+                <img src="./images/FeastFindr.png" class="logo-image">
+            </a>
+            <div class="menu-container">
+                <a class="menu-item text-light-blue brand-font" href="#">HOME</a>
+                <a class="menu-item menu-button brand-font" href="#">
+                    {{#if loggedIn}}
+                    <strong>Profile</strong>
+                    {{else}}
+                    <strong>SIGN UP / LOGIN</strong>
+                    {{/if}}
                 </a>
-
-                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="">
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-                </a>
-            </div>
-
-            <div class="navbar-menu">
-                <div class="navbar-start">
-                <a class="navbar-item">
-                    Home
-                </a>
-                <div class="navbar-end">
-                    <div class="navbar-item">
-                    <div class="buttons">
-
-                        {{#if loggedIn}}
-                        <a class="button is-primary">
-                        <strong>Profile</strong>
-                        </a>
-                        
-                        {{else}}
-                        <a class="button is-primary">
-                        <strong>Sign up / Log in</strong>
-                        </a>
-                        {{/if}}
-                        </div>
-                    </div>
-                    </div>
-                
-                </div>
             </div>
         </nav>
 
