implemented basic site navigation
moved package.json file
made code to navigate through the webpage using the navbar and the sign up button on the home page

--- a/Develop/views/homepage.handlebars
+++ b/Develop/views/homepage.handlebars
@@ -42,8 +42,8 @@
                    Attract more customers and boost your sales by signing up with FeastFindr! Our platform showcases your food truck, making it easier for food lovers to discover and enjoy your delicious creations. Don't miss out on this opportunity to grow your business and become a go-to choice for mobile food enthusiasts in your area.
                 </p>
 
-                <form id="search-form" action="/sign-up" method="GET" class="form-container content-container">
-                  <button class="search-btn brand-font bg-dark-blue text-light-blue btn-hover" type="submit">SIGN UP</button>
+                <form id="search-form2" action="/login" method="GET" class="form-container content-container">
+                  <button class="signup-btn search-btn brand-font bg-dark-blue text-light-blue btn-hover" type="submit">SIGN UP</button>
                 </form>
               </div>
             </div>
@@ -146,3 +146,7 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+</section>
+<script src="/js/homepage.js"></script>
