--- a/Develop/views/layouts/main.handlebars
+++ b/Develop/views/layouts/main.handlebars
@@ -24,8 +24,8 @@
                 <img src="./images/FeastFindr.png" class="logo-image">
             </a>
             <div class="menu-container">
-                <a class="menu-item text-light-blue brand-font" href="#">HOME</a>
-                <a class="menu-item menu-button brand-font" href="#">
+                <a class="menu-item text-light-blue brand-font" href="/">HOME</a>
+                <a class="menu-item menu-button brand-font" href="/login">
                     {{#if loggedIn}}
                     <strong>Profile</strong>
                     {{else}}
