--- a/Develop/views/homepage.handlebars
+++ b/Develop/views/homepage.handlebars
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="columns is-vcentered">
         <div class="column content-container">
-          <h2 class="text-burnt-orange">FIND YOUR FLAVOR</h2>
+          <h2 class="text-burnt-orange search-title">FIND YOUR FLAVOR</h2>
           <p class="text-dark-blue">FeastFindr is a mobile app that helps you locate your favorite food trucks on the go. Our mission is to provide foodies with an easy and convenient way to satisfy their cravings and discover new mobile eats.</p>
 
           <form id="search-form" action="/food-truck" method="GET" class="form-container content-container">
@@ -54,32 +54,32 @@
 <!-- Testimonials section -->
 <section class="section">
   <div class="container">
-    <h2 class="title has-text-centered">What our customers say</h2>
+    <h2 class="title has-text-centered brand-font review-title">WHAT OUR CUSTOMERS SAY</h2>
     <div class="columns">
       <!-- Testimonial 1 -->
       <div class="column">
         <div class="card">
           <div class="card-image">
-            <figure class="image is-128x128 is-rounded is-centered">
-              <img src="#" alt="Customer 1 photo">
+            <figure class="image is-160x160 is-rounded centered-image round-prof">
+              <img src="./images/FF-Peter.png" alt="Customer 1 photo">
             </figure>
           </div>
           <div class="card-content">
-            <div class="content">
-              <p>"Customer 1 review comment."</p>
-              <span class="icon has-text-warning">
+            <div class="content has-text-centered">
+              <p class="review-p">"FeastFindr has helped us stand out in a competitive market. The increased visibility and user-friendly platform makes it simple for food lovers to discover our unique culinary creations. It's been an invaluable asset to our growth!" - Peter, Gourmet Grilled Cheese Co.</p>
+              <span class="icon star-color">
                 <i class="fas fa-star"></i>
               </span>
-              <span class="icon has-text-warning">
+              <span class="icon star-color">
                 <i class="fas fa-star"></i>
               </span>
-              <span class="icon has-text-warning">
+              <span class="icon star-color">
                 <i class="fas fa-star"></i>
               </span>
-              <span class="icon has-text-warning">
+              <span class="icon star-color">
                 <i class="fas fa-star"></i>
               </span>
-              <span class="icon has-text-warning">
+              <span class="icon star-color">
                 <i class="fas fa-star"></i>
               </span>
             </div>
@@ -90,26 +90,26 @@
       <div class="column">
         <div class="card">
           <div class="card-image">
-            <figure class="image is-128x128 is-rounded is-centered">
-              <img src="path/to/customer2.jpg" alt="Customer 2 photo">
+            <figure class="image is-160x160 is-rounded centered-image round-prof">
+              <img src="./images/FF-James.png" alt="Customer 2 photo">
             </figure>
           </div>
           <div class="card-content">
-            <div class="content">
-              <p>"Customer 2 review comment."</p>
-              <span class="icon has-text-warning">
+            <div class="content has-text-centered">
+              <p class="review-p">"FeastFindr has been a game changer for our food truck. Our customer base has grown significantly, and the app makes it so easy for them to find us. Highly recommended for any food truck owner!" - James, Smokey BBQ Haven</p>
+              <span class="icon star-color">
                 <i class="fas fa-star"></i>
               </span>
-              <span class="icon has-text-warning">
+              <span class="icon star-color">
                 <i class="fas fa-star"></i>
               </span>
-              <span class="icon has-text-warning">
+              <span class="icon star-color">
                 <i class="fas fa-star"></i>
               </span>
-              <span class="icon has-text-warning">
+              <span class="icon star-color">
                 <i class="fas fa-star"></i>
               </span>
-              <span class="icon has-text-warning">
+              <span class="icon star-color">
                 <i class="fas fa-star"></i>
               </span>
             </div>
@@ -120,26 +120,26 @@
       <div class="column">
         <div class="card">
           <div class="card-image">
-            <figure class="image is-128x128 is-rounded is-centered">
-              <img src="path/to/customer3.jpg" alt="Customer 3 photo">
+            <figure class="image is-160x160 is-rounded centered-image round-prof">
+              <img src="./images/FF-Laura.png" alt="Customer 3 photo">
             </figure>
           </div>
           <div class="card-content">
-            <div class="content">
-              <p>"Customer 3 review comment."</p>
-              <span class="icon has-text-warning">
+            <div class="content has-text-centered">
+              <p class="review-p">"Since joining FeastFindr, we've seen a surge in foot traffic and sales. The app provides great exposure and helps us connect with our target audience. It's an essential tool for our business!" - Laura, Tasty Tacos Express</p>
+              <span class="icon star-color">
                 <i class="fas fa-star"></i>
               </span>
-              <span class="icon has-text-warning">
+              <span class="icon star-color">
                 <i class="fas fa-star"></i>
               </span>
-              <span class="icon has-text-warning">
+              <span class="icon star-color">
                 <i class="fas fa-star"></i>
               </span>
-              <span class="icon has-text-warning">
+              <span class="icon star-color">
                 <i class="fas fa-star"></i>
               </span>
-              <span class="icon has-text-warning">
+              <span class="icon star-color">
                 <i class="fas fa-star"></i>
               </span>
             </div>
