added user controller function for form button

--- a/Develop/views/homepage.handlebars
+++ b/Develop/views/homepage.handlebars
@@ -52,8 +52,13 @@
         <label for="zipcode">Zipcode: </label>
         <input type="text" id="zipcode" placeholder = "recommended but not required" name="zipcode" >
         <button type="submit">Find Food Trucks Near You!</button>
-    </form>
-    <div id="food-truck-list"></div>
+         </form>
+
+         <div id="result" hidden>
+      <button id="new-search">New Search</button>
+      <div id="food-truck-list"></div>
+    </div>
+    
                 <form id="search-form2" action="/login" method="GET" class="form-container content-container">
                   <button class="signup-btn search-btn brand-font bg-dark-blue text-light-blue btn-hover" type="submit">SIGN UP</button>
                 </form>
