--- a/Develop/views/profile.handlebars
+++ b/Develop/views/profile.handlebars
@@ -1,37 +1,32 @@
- <section class="section">
-      <div class="container">
-        <div class="columns is-multiline">
-          <div class="column is-one-half">
-            <div class="card">
-              <div class="card-content">
-                <article class="media">
-                  <figure class="media-left">
-                    {{#if profilePic}}
-                      <p class="image is-64x64">
-                        <img src="{{profilePic}}" alt="{{name}}">
-                      </p>
-                    {{else}}
-                      <p class="image is-64x64">
-                        <img src="https://images.unsplash.com/photo-1612208176815-e132bcf971b0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Placeholder image">
-                      </p>
-                    {{/if}}
-                  </figure>
-                      <p class="title .text-burnt-orange">{{name}}</p>
+<body>
+    <section class="section">
+        <div class="container">
+            <div class="tile is-ancestor">
+                <div class="tile is-4 is-vertical is-parent">
+                    <div class="tile is-child box">
+                        <h1 class="title has-text-centered">{{foodTruck.name}}</h1>
+                        <figure class="image is-128x128 has-text-centered">
+                            <img class="is-rounded" src="{{foodTruck.profilePicture}}" alt="Food truck profile picture">
+                        </figure>
                     </div>
-              </div>
+                </div>
+                <div class="tile is-parent">
+                    <div class="tile is-child box">
+                        <h1 class="title has-text-centered">Menu</h1>
+                        <div class="content">
+                            <ul>
+                                {{#each foodTruck.menu}}
+                                <li>
+                                    <p class="title is-5">{{this.name}}</p>
+                                    <p class="subtitle is-6">Price: ${{this.price}}</p>
+                                </li>
+                                {{/each}}
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-          
-          <div class="column is-one-half">
-            <div class="card">
-              <div class="card-content">
-                <h2 class="title">Another Post Title</h2>
-                <p class="content">Suspendisse potenti. Praesent ac lectus dignissim, consequat velit sit amet, luctus elit. Vivamus at nisl vel dolor pharetra fermentum. Nullam eu velit ut nulla tempus euismod.</p>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
     </section>
-  </body>
+</body>
 </html>
