fixed bug on profile route in homepage.js

--- a/Develop/views/layouts/main.handlebars
+++ b/Develop/views/layouts/main.handlebars
@@ -13,14 +13,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
 
     <div class="flex-column justify-space-around">
 
         <nav class="custom-navbar bg-dark-blue" role="navigation" aria-label="main navigation">
-            <a class="logo-container" href="https://bulma.io">
+            <a class="logo-container" href="/">
                 <img src="./images/FeastFindr.png" class="logo-image">
             </a>
             <div class="menu-container">
@@ -36,7 +39,7 @@
         </nav>
 
         <main class="">
-        {{{ body }}}
+            {{{ body }}}
         </main>
     </div>
 
@@ -49,7 +52,7 @@
             </div>
         </div>
     </footer>
-   
+
 </body>
 
 </html>
