--- a/Develop/views/menu.handlebars
+++ b/Develop/views/menu.handlebars
@@ -1,7 +1,7 @@
 <div class="container mb-6" id="for-truck-id" data-session="1">
     <h3 class="title ">Create your menu!</h3>
     <form class="form block" id="menu-form">
-        <div class="box" id="items-container">
+        <div class="box is-hidden" id="items-container">
         </div>
         <button class="button" type="button" id="add-menu-item">Add item</button>
         <button class="button is-light" type="submit">Submit menu</button>
