--- a/Develop/views/profile.handlebars
+++ b/Develop/views/profile.handlebars
@@ -1,9 +1,10 @@
 <body>
+  <body class="user-body"
     <section class="section">
         <div class="container">
             <div class="tile is-ancestor">
                 <div class="tile is-4 is-vertical is-parent">
-                    <div class="tile is-child box">
+                    <div class="tile is-child box left-tile">
                         <h1 class="title has-text-centered">{{foodTruck.name}}</h1>
                         <figure class="image is-128x128 has-text-centered">
                             <img class="is-rounded" src="{{foodTruck.profilePicture}}" alt="Food truck profile picture">
@@ -11,7 +12,7 @@
                     </div>
                 </div>
                 <div class="tile is-parent">
-                    <div class="tile is-child box">
+                    <div class="tile is-child box right-tile">
                         <h1 class="title has-text-centered">Menu</h1>
                         <div class="content">
                             <ul>
@@ -29,4 +30,3 @@
         </div>
     </section>
 </body>
-</html>
