--- a/Develop/views/profile.handlebars
+++ b/Develop/views/profile.handlebars
@@ -1,5 +1,4 @@
-<body>
-  <body class="user-body"
+<body class="user-body">
     <section class="section">
         <div class="container">
             <div class="tile is-ancestor">
