--- a/Develop/public/css/style.css
+++ b/Develop/public/css/style.css
@@ -237,13 +237,15 @@ input[type="text"]::placeholder {
     perspective: 1000px;
     width: 300px;
     height: 300px;
+    background-color: #E17A2C;
 }
 .flip-tile-inner {
     position: relative;
     transform-style: preserve-3d;
-    transition: transform 0.6s;
+    transition: transform 2s;
     width: 100%;
     height: 100%;
+    background-color: #E17A2C;
 }
 .flip-tile:click .flip-tile-inner {
     transform: rotateY(180deg);
@@ -254,12 +256,21 @@ input[type="text"]::placeholder {
     backface-visibility: hidden;
     width: 100%;
     height: 100%;
+    background-color: #E17A2C;
 }
 .flip-tile-back {
     transform: rotateY(180deg);
+    
 }
 .tile-content {
     padding: 0 10px;
     word-wrap: break-word;
     overflow-wrap: break-word;
+    
+}
+.tile-front {
+    background-color: #E17A2C;
+}
+.tile-back {
+    background-color: #D95437;
 }
