--- a/Develop/views/partials/tiles.handlebars
+++ b/Develop/views/partials/tiles.handlebars
@@ -5,14 +5,14 @@
         <div class="flip-tile">
             <div class="flip-tile-inner">
                 <div class="flip-tile-front tile is-child box">
-                    <h1 class="title tile-content">{{truck.name}}</h1>
+                    <h1 class="title tile-content has-text-centered">{{truck.name}}</h1>
                     <figure class="image is-128x128 has-text-centered">
                         <img class="is-rounded" src="{{truck.image}}" alt="Food truck profile picture">
                     </figure>
                     <p class="subtitle has-text-centered tile-content">Click to see menu</p>
                 </div>
                 <div class="flip-tile-back tile is-child box">
-                    <h1 class="title">Menu</h1>
+                    <h1 class="title has-text-centered">Menu</h1>
                     <div class="content">
                         <ul>
                             {{#each truck.menu}}
