--- a/Develop/views/results.handlebars
+++ b/Develop/views/results.handlebars
@@ -1,5 +1,5 @@
 
-<body>
+<body class="user-body">
     <section class="section">
         <div class="container">
             <h1 class="title has-text-centered">Food In Your Area</h1>
