simplified the address form in handlebars

--- a/Develop/views/homepage.handlebars
+++ b/Develop/views/homepage.handlebars
@@ -42,15 +42,9 @@
                    Attract more customers and boost your sales by signing up with FeastFindr! Our platform showcases your food truck, making it easier for food lovers to discover and enjoy your delicious creations. Don't miss out on this opportunity to grow your business and become a go-to choice for mobile food enthusiasts in your area.
                 </p>
 
-                 <form id="search-form">
-        <label for="street">Street:</label>
-        <input type="text" id="street" name="street" required>
-        <label for="city">City:</label>
-        <input type="text" id="city" name="city" required>
-        <label for="state">State:</label>
-        <input type="text" id="state" name="state" required>
-        <label for="zipcode">Zipcode: </label>
-        <input type="text" id="zipcode" placeholder = "recommended but not required" name="zipcode" >
+                 <form id="address-form">
+        <label for="address">Please Fill In Your Address:</label>
+        <input type="text" id="user-address" placeholder = "Ex: 1600 Pennsylvania Ave. Washington DC" name="address" required>
         <button type="submit">Find Food Trucks Near You!</button>
          </form>
 
