--- a/Develop/views/menu.handlebars
+++ b/Develop/views/menu.handlebars
@@ -1,4 +1,4 @@
-<div class="container mb-6" id="for-truck-id" data-session="1">
+<div class="container mb-6" id="for-truck-id" data-session="{{id}}">
     <h3 class="title ">Create your menu!</h3>
     <form class="form block" id="menu-form">
         <div class="box is-hidden" id="items-container">
