--- a/Develop/views/truck.handlebars
+++ b/Develop/views/truck.handlebars
@@ -1,7 +1,7 @@
 {{!-- add food truck form --}}
 
 
-<form class="container" id="truck-form" data-session="1">
+<form class="container" id="truck-form" data-session="{{id}}">
     <div class="field">
         <label class="label">Name</label>
         <div class="control">
