added routes for profile

--- a/Develop/views/layouts/main.handlebars
+++ b/Develop/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
                 <a class="menu-item text-light-blue brand-font" href="/">HOME</a>
                 {{#if logged_in}}
 
-                <a class="menu-item menu-button brand-font" href="/profile">
+                <a class="menu-item menu-button brand-font" href="/profile" id="profile-link">
                     <strong>Profile</strong>
                 </a>
 
@@ -48,7 +48,7 @@
             </div>
         </nav>
 
-        <main class="">
+        <main class="container" id="content-area">
             {{{ body }}}
         </main>
     </div>
@@ -65,6 +65,7 @@
 
     {{#if logged_in}}
     <script src="/js/logout.js"></script>
+    <script src="/js/profile.js"></script>
     {{/if}}
 </body>
 
