--- a/Develop/views/partials/tiles.handlebars
+++ b/Develop/views/partials/tiles.handlebars
@@ -5,7 +5,7 @@
         <div class="flip-tile">
             <div class="flip-tile-inner">
                 <div class="flip-tile-front tile is-child box">
-                    <h1 class="title tile-content has-text-centered">{{truck.name}}</h1>
+                    <h1 class="title tile-content has-text-centered">{{foodTruck.name}}</h1>
                     <figure class="image is-128x128 has-text-centered">
                         <img class="is-rounded" src="{{truck.image}}" alt="Food truck profile picture">
                     </figure>
@@ -15,7 +15,7 @@
                     <h1 class="title has-text-centered">Menu</h1>
                     <div class="content">
                         <ul>
-                            {{#each truck.menu}}
+                            {{#each foodTruck.menuItems}}
                             <li>
                                 <p class="title is-5 tile-content">{{this.name}}</p>
                                 <p class="subtitle is-6 tile-content">Price: ${{this.price}}</p>
