Added the profile menu items
also added in the logged in feature

--- a/Develop/views/profile.handlebars
+++ b/Develop/views/profile.handlebars
@@ -15,7 +15,7 @@
                         <h1 class="title has-text-centered">Menu</h1>
                         <div class="content">
                             <ul>
-                                {{#each menuItem as |item|}}
+                                {{#each menu-items as |item|}}
                                 <li>
                                     <p class="title is-5">{{item.name}}</p>
                                     <p class="subtitle is-6">Price: ${{item.price}}</p>
